--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,14 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    image: gobackend:latest
+    ports:
+      - 8080:8080
+    depends_on:
+    - mysql
+
   mysql:
     image: mysql
     ports:
